select en especialidad

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             <input type="text" id="apellidos" class="col-md-12 my-2" placeholder="Ingrese Apellidos">
             <input type="number" id="edad" class="col-md-12 my-2" placeholder="Ingrese Edad">
             <input type="email" id="email" class="col-md-12 my-2" placeholder="Ingrese Email">
-            <input type="text" id="especialidad" class="col-md-12 my-2" placeholder="Ingrese Especialidad">
+            <label for="especialidad">Escoga especialidad:</label>
+            <select type="text" id="especialidad" class="col-md-12 mb-2" placeholder="Ingrese Especialidad">
+                <option value="traumatologia" id="traumatologia">Traumatologia</option>
+                <option value="radiologia" id="radiologia">Radiologia</option>
+                <option value="dental" id="dental" >Dental</option>
+            </select>
             <input type="date" id="fecha" class="col-md-12 my-2" placeholder="Ingrese Fecha">
             <input type="time" id="hora" class="col-md-12 my-2">
 
