--- a/index.html
+++ b/index.html
@@ -21,22 +21,30 @@
         <div class="formulario row p-3">
             <form action="" method="POST">
                 <label for="rut">Ingrese rut del paciente:</label>
-                <input name="rut" type="number" id="rut" class="col-md-12 mb-2" placeholder="Formato: 11.111.111-1" required>
-                <label for="nombres">Ingrese ambos nombres:</label>
-                <input name="nombres" type="text" id="nombres" class="col-md-12 mb-2" placeholder="Ejemplo: Rosa Espinoza" required>
-                <input type="text" id="apellidos" class="col-md-12 my-2" placeholder="Ingrese Apellidos" required>
-                <input type="number" id="edad" class="col-md-12 my-2" placeholder="Ingrese Edad" required>
+                <input onblur="validarRut()" name="rut" type="text" id="rut" class="inputFormulario col-md-12 mb-2" placeholder="Formato: 11.111.111-1"
+                    >
+                <label for="nombres">Ingrese ambos nombres del paciente:</label>
+                <input onblur="validarNombres()" name="nombres" type="text" id="nombres" class=" inputFormulario col-md-12 mb-2"
+                    placeholder="Ejemplo: Rosa Espinoza" >
+                <label for="apellidos">Ingrese apellidos del paciente:</label>
+                <input onblur="validarApellidos()" name="apellidos" type="text" id="apellidos" class="inputFormulario col-md-12 mb-2"
+                    placeholder="Ejemplo: Huerta Castañeda " >
+                <label for="edad">Ingrese edad del paciente:</label>
+                <input onblur="validarEdad()" name="edad" type="number" id="edad" class="inputFormulario col-md-12 mb-2" placeholder="Ingrese un número"
+                    >
                 <label for="email">Ingrese correo electrónico:</label>
-                <input name="email" type="email" id="email" class="col-md-12 mb-2" placeholder="Formato: micorreo@mail.com" required>
+                <input onblur="validarCorreo()" name="email" type="email" id="email" class="inputFormulario col-md-12 mb-2"
+                    placeholder="Formato: micorreo@mail.com" >
                 <label for="especialidad">Escoja especialidad:</label>
-                <select name="especialidad" id="especialidad" class="col-md-12 mb-2" required>
-                    <option value="traumatologia" id="traumatologia">Traumatologia</option>
-                    <option value="radiologia" id="radiologia">Radiologia</option>
+                <select name="especialidad" id="especialidad" class="inputFormulario col-md-12 mb-2" >
+                    <option value="traumatologia" id="traumatologia">Traumatología</option>
+                    <option value="radiologia" id="radiologia">Radiología</option>
                     <option value="dental" id="dental">Dental</option>
                 </select>
-                <input type="date" id="fecha" class="col-md-12 my-2" placeholder="Ingrese Fecha" required>
+                <label for="fecha">Escoja fecha de atención:</label>
+                <input name="fecha" type="date" id="fecha" class="inputFormulario col-md-12 mb-2" placeholder="Ingrese Fecha" >
                 <label for="time">Escoja su hora de atención:</label>
-                 <select name="horas" id="hora" class="col-md-12 mb-2" required>
+                <select name="horas" id="hora" class="col-md-12 mb-2" >
                     <option value="hora1">8:00</option>
                     <option value="hora2">8:30</option>
                     <option value="hora3">9:00</option>
@@ -46,9 +54,9 @@
                     <option value="hora7">11:00</option>
                     <option value="hora8">11:30</option>
                     <option value="hora8">12:00</option>
-                <input type="submit" id="boton" class="p-2 mt-2 col-md" value="Reservar">
+                    <input type="submit" id="boton" class="p-2 mt-2 col-md" value="Reservar">
             </form>
-            
+
         </div>
 
     </div>
