--- a/index.html
+++ b/index.html
@@ -21,30 +21,31 @@
         <div class="formulario row p-3">
             <form action="" method="POST">
                 <label for="rut">Ingrese rut del paciente:</label> <span id="rut1"></span>
-                <input onblur="validarRut()" name="rut" type="text" id="rut" class="inputFormulario col-md-12 mb-2" placeholder="Formato: 11.111.111-1"
-                    required >
+                <input onblur="validarRut()" name="rut" type="text" id="rut" class="inputFormulario col-md-12 mb-2"
+                    placeholder="Formato: 11.111.111-1" required>
                 <label for="nombres">Ingrese ambos nombres del paciente:</label> <span id="nombres1"></span>
-                <input onblur="validarNombres()" name="nombres" type="text" id="nombres" class=" inputFormulario col-md-12 mb-2"
-                    placeholder="Ejemplo: Rosa Espinoza" required>
-                <label for="apellidos">Ingrese apellidos del paciente:</label> <span id="apellidos1" ></span>
-                <input onblur="validarApellidos()" name="apellidos" type="text" id="apellidos" class="inputFormulario col-md-12 mb-2"
-                    placeholder="Ejemplo: Huerta Castañeda " required>
+                <input onblur="validarNombres()" name="nombres" type="text" id="nombres"
+                    class=" inputFormulario col-md-12 mb-2" placeholder="Ejemplo: Rosa Espinoza" required>
+                <label for="apellidos">Ingrese apellidos del paciente:</label> <span id="apellidos1"></span>
+                <input onblur="validarApellidos()" name="apellidos" type="text" id="apellidos"
+                    class="inputFormulario col-md-12 mb-2" placeholder="Ejemplo: Huerta Castañeda " required>
                 <label for="edad">Ingrese edad del paciente:</label> <span id="edad1"></span>
-                <input onblur="validarEdad()" name="edad" type="text" id="edad" class="inputFormulario col-md-12 mb-2" placeholder="Ingrese un número"
-                   required >
+                <input onblur="validarEdad()" name="edad" type="text" id="edad" class="inputFormulario col-md-12 mb-2"
+                    placeholder="Ingrese un número" required>
                 <label for="email">Ingrese correo electrónico:</label> <span id="email1"></span>
-                <input onblur="validarCorreo()" name="email" type="email" id="email" class="inputFormulario col-md-12 mb-2"
-                    placeholder="Formato: micorreo@mail.com" required >
+                <input onblur="validarCorreo()" name="email" type="email" id="email"
+                    class="inputFormulario col-md-12 mb-2" placeholder="Formato: micorreo@mail.com" required>
                 <label for="especialidad">Escoja especialidad:</label>
-                <select name="especialidad" id="especialidad" class="inputFormulario col-md-12 mb-2" >
+                <select name="especialidad" id="especialidad" class="inputFormulario col-md-12 mb-2">
                     <option value="traumatologia" id="traumatologia">Traumatología</option>
                     <option value="radiologia" id="radiologia">Radiología</option>
                     <option value="dental" id="dental">Dental</option>
                 </select>
-                <label for="fecha">Escoja fecha de atención:</label>
-                <input name="fecha" type="date" id="fecha" class="inputFormulario col-md-12 mb-2" placeholder="Ingrese Fecha" >
+                <label for="fecha">Ingrese fecha de atención:</label><span id="fecha1"></span>
+                <input onblur="validarFecha()" name="fecha" type="text" id="fecha"
+                    class="inputFormulario col-md-12 mb-2" placeholder="dd/mm/aaaa" required>
                 <label for="time">Escoja su hora de atención:</label>
-                <select name="horas" id="hora" class="col-md-12 mb-2" >
+                <select name="horas" id="hora" class="col-md-12 mb-2">
                     <option value="hora1">8:00</option>
                     <option value="hora2">8:30</option>
                     <option value="hora3">9:00</option>
