--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     class="inputFormulario col-md-12 mb-2" placeholder="Formato: micorreo@mail.com" >
                 <label for="especialidad">Escoja especialidad:</label>
                 <select name="especialidad" id="especialidad" class="inputFormulario col-md-12 mb-2">
+                    <option value="seleccioneEspecialidad"></option>
                     <option value="traumatologia" id="traumatologia">Traumatología</option>
                     <option value="radiologia" id="radiologia">Radiología</option>
                     <option value="dental" id="dental">Dental</option>
@@ -46,6 +47,7 @@
                     class="inputFormulario col-md-12 mb-2" placeholder="dd/mm/aaaa" >
                 <label for="time">Escoja su hora de atención:</label>
                 <select name="horas" id="hora" class="col-md-12 mb-2">
+                    <option value="seleccioneHora"></option>
                     <option value="hora1">8:00</option>
                     <option value="hora2">8:30</option>
                     <option value="hora3">9:00</option>
