--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,7 @@
     <link rel="stylesheet" href="./assets/styles.css">
     <title>Document</title>
 </head>
-
+<!-- Link a este trabajo https://dereemii.github.io/HorasMedicas_JS/ -->
 <body>
     <div class="container mt-4  border-aqua">
         <div class="titulo text-center">
