--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/yourcode.js"></script>
     <link rel="stylesheet" href="./assets/styles.css">
-    <title>Document</title>
+    <title>Formulario Horas Médicas</title>
 </head>
 <!-- Link a este trabajo https://dereemii.github.io/HorasMedicas_JS/ -->
 <body>
